fix: 🎨 feed alignments

--- a/src/components/media-types/html/index.module.scss
+++ b/src/components/media-types/html/index.module.scss
@@ -8,7 +8,8 @@
 .container {
   position: relative;
   display: block;
-  width: 100%;
+  width: 100vw;
+
   margin: 0 auto;
   display: flex;
   align-items: center;
