--- a/src/components/media-types/image/index.module.scss
+++ b/src/components/media-types/image/index.module.scss
@@ -11,8 +11,8 @@
 
 .container {
   .image {
+    width: 100vw;
     display: block;
-    width: auto;
     max-width: 100%;
     height: auto;
     margin: 0 auto;
